chore: Update Astro adapter for Cloudflare and remove unused dependencies

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -23,7 +23,7 @@ const SOCIAL_ICONS: SocialIcon = {
 const linkedInfo = profiles.find(({ network }) => network === 'LinkedIn')
 const linkedUrl = linkedInfo?.url
 
-const printInfo = [email, phone, linkedUrl].filter(Boolean).join(' • ')
+const printInfo = [email, phone, linkedUrl, 'https://dotmd.dev'].filter(Boolean).join(' • ')
 ---
 
 <Section>
