--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -43,7 +43,7 @@ import { education } from '@cv'
 
   article h3 {
     font-weight: 500;
-    color: #111;
+    color: #fff;
   }
 
   header {
@@ -54,7 +54,7 @@ import { education } from '@cv'
   }
 
   time {
-    color: #555;
+    color: #fff;
     font-size: 0.85rem;
     min-width: 102px;
   }
