--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -65,11 +65,11 @@ import { work } from '@cv'
 
   article h3 {
     font-weight: 500;
-    color: #111;
+    color: #fff;
   }
 
   article a {
-    color: #111;
+    color: #fff;
   }
 
   article a:hover {
@@ -77,7 +77,7 @@ import { work } from '@cv'
   }
 
   article h4 {
-    color: #222;
+    color: #fff;
     font-weight: 400;
   }
 
@@ -89,7 +89,7 @@ import { work } from '@cv'
   }
 
   time {
-    color: #555;
+    color: #fff;
     font-size: 0.85rem;
     min-width: 102px;
     cursor: default;
@@ -103,7 +103,7 @@ import { work } from '@cv'
 
   [data-title]:after {
     content: attr(data-title);
-    background-color: #333;
+    background-color: #fff;
     color: #fff;
     font-size: 0.75rem;
     font-family:
