--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -58,7 +58,6 @@ import { projects } from '@cv'
 
   article {
     border-radius: 8px;
-    border: 1px solid #f2f2f2;
     gap: 16px;
     display: flex;
     flex-direction: column;
@@ -75,7 +74,7 @@ import { projects } from '@cv'
   }
 
   article a {
-    color: #111;
+    color: #fff;
   }
 
   article a:hover {
@@ -105,8 +104,8 @@ import { projects } from '@cv'
 
   footer span {
     border-radius: 6px;
-    background: #eee;
-    color: #444;
+    border: solid 1px #eee;
+    color: #fff;
     font-size: 0.6rem;
     font-weight: 500;
     padding: 0.2rem 0.6rem;
@@ -135,7 +134,6 @@ import { projects } from '@cv'
 
     article {
       border: none;
-      box-shadow: 0 1px 1px #f2f2f2;
       padding: 0 0 16px 0;
     }
   }
