--- a/src/icons/Blog.astro
+++ b/src/icons/Blog.astro
@@ -1,15 +1,1 @@
-<svg
-	height='12'
-	width='12'
-	xmlns='http://www.w3.org/2000/svg'
-	viewBox='-271 273 256 256'
-	xml:space='preserve'
-	fill='currentColor'
->
-	<path
-		d='M-271 360v48.9c31.9 0 62.1 12.6 84.7 35.2s35.1 52.8 35.1 84.8v.1h49.1c0-46.6-19-88.7-49.6-119.4-30.5-30.6-72.7-49.5-119.3-49.6zM-237 460.9c-9.4 0-17.8 3.8-24 10s-10 14.6-10 24c0 9.3 3.8 17.7 10 23.9 6.2 6.1 14.6 9.9 24 9.9s17.8-3.7 24-9.9 10-14.6 10-23.9c0-9.4-3.8-17.8-10-24-6.2-6.2-14.6-10-24-10z'
-	></path>
-	<path
-		d='M-90.1 348.1c-46.3-46.4-110.2-75.1-180.8-75.1v48.9c114.1.1 206.8 93 206.9 207.1h49c0-70.6-28.7-134.5-75.1-180.9z'
-	></path>
-</svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="m17.093 1.293-11.2 11.2a.99.99 0 0 0-.242.391l-1.6 4.8A1 1 0 0 0 5 19a1.014 1.014 0 0 0 .316-.051l4.8-1.6a1.006 1.006 0 0 0 .391-.242l11.2-11.2a1 1 0 0 0 0-1.414l-3.2-3.2a1 1 0 0 0-1.414 0ZM9.26 15.526l-2.679.893.893-2.679L17.8 3.414 19.586 5.2ZM3 21h17a1 1 0 0 1 0 2H3a1 1 0 0 1 0-2Z"/></svg>
