--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import { ViewTransitions } from 'astro:transitions'
+import { CommandPalette } from '@/components/CommandPalette.jsx'
+
+import Navbar from '@/components/Navbar.astro'
 import { basics } from '@cv'
 
 interface Props {
@@ -11,7 +15,10 @@ const { image, summary, url } = basics
 ---
 
 <!doctype html>
-<html lang='es'>
+<html
+  lang='es'
+  class='relative scroll-p-8 scroll-smooth dark:bg-[#131313] dark:text-white'
+>
   <head>
     <meta charset='UTF-8' />
     <title>{title}</title>
@@ -79,93 +86,11 @@ const { image, summary, url } = basics
       name='twitter:image'
       content={image}
     />
+    <ViewTransitions />
   </head>
-  <body>
+  <body class='flex'>
+    <Navbar />
     <slot />
+    <CommandPalette />
   </body>
 </html>
-
-<style is:global>
-  html {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      'Courier New',
-      Courier,
-      monospace;
-    background: #fff;
-    letter-spacing: -0.025rem;
-  }
-
-  body,
-  figure {
-    margin: 0;
-    padding: 0;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4 {
-    margin: 0;
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      'Segoe UI',
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      'Open Sans',
-      'Helvetica Neue',
-      sans-serif;
-  }
-
-  p {
-    color: #666;
-    font-size: 0.9rem;
-    line-height: 1.5;
-    margin: 0;
-    text-wrap: pretty;
-  }
-
-  .print {
-    display: none !important;
-  }
-
-  @media print {
-    .no-print {
-      display: none !important;
-    }
-
-    .print {
-      display: block !important;
-    }
-
-    astro-dev-toolbar {
-      display: none !important;
-    }
-
-    article {
-      break-inside: avoid;
-    }
-  }
-</style>
