--- a/src/components/navbar/NavLink.astro
+++ b/src/components/navbar/NavLink.astro
@@ -1,12 +1,12 @@
 ---
-const { href, disabled } = Astro.props
+const { href, disabled, tooltip } = Astro.props
 
 const isCurrentPage = Astro.url.pathname.split('/')[1] === href.split('/')[1]
 ---
 
 <a
   href={href}
-  class={`${isCurrentPage ? 'text-white' : 'text-neutral-600 hover:text-neutral-200'} ${disabled && 'pointer-events-none'} transition `}
+  class={`${isCurrentPage ? 'dark:text-white' : 'text-neutral-500 hover:text-neutral-800 dark:text-neutral-600 dark:hover:text-neutral-200'} ${disabled && 'pointer-events-none'} transition `}
 >
   <slot />
 </a>
