--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Post from '@/components/blog/Post.astro'
 import Layout from '@/layouts/Layout.astro'
+import Bmc from '@/icons/Bmc.astro'
 
 import { getCollection } from 'astro:content'
 const allPosts = await (
@@ -11,10 +12,10 @@ const allPosts = await (
 <Layout title='Home'>
   <main class='flex w-full'>
     <div
-      class='bloglist sticky top-0 hidden max-h-screen min-w-[500px] flex-col gap-6 overflow-y-scroll border-r lg:flex dark:border-r-neutral-800'
+      class='bloglist sticky top-0 hidden max-h-screen min-h-screen min-w-[500px] flex-col gap-6 overflow-y-scroll border-r lg:flex dark:border-r-neutral-800'
     >
       <header
-        class='sticky top-0 z-10 flex h-[65px] items-center justify-between border-b px-6 dark:border-neutral-800 dark:bg-[#131313]'
+        class='sticky top-0 z-10 flex h-[65px] items-center justify-between border-b p-6 dark:border-neutral-800 dark:bg-[#131313]'
       >
         <h1 class='text-xl'>Blog</h1>
         <div>
@@ -22,11 +23,19 @@ const allPosts = await (
           <button> Filter </button>
         </div>
       </header>
-      <div class='flex flex-col gap-2 px-6'>
+      <div class='flex min-h-full flex-col gap-2 px-6'>
         {allPosts.map((post) => <Post post={post} />)}
       </div>
+      <footer class='sticky bottom-0 w-full border-t border-t-neutral-800 bg-[#131313]'>
+        <a
+          href='/'
+          class='flex h-full w-full justify-center gap-2 p-6'
+        >
+          <Bmc /> <span>Invítame a un café</span></a
+        >
+      </footer>
     </div>
-    <div class='mx-auto mt-[65px] w-full px-6'>
+    <div class='m-6 w-full rounded-lg border border-neutral-800 px-6 py-[65px]'>
       <div
         class='prose mx-auto w-full dark:prose-invert prose-p:text-pretty prose-pre:w-full prose-img:rounded-xl'
       >
