--- a/src/components/navbar/NavLink.astro
+++ b/src/components/navbar/NavLink.astro
@@ -6,6 +6,7 @@ const isCurrentPage = Astro.url.pathname.split('/')[1] === href.split('/')[1]
 
 <a
   href={href}
+  data-tippy-content={tooltip}
   class={`${isCurrentPage ? 'dark:text-white' : 'text-neutral-500 hover:text-neutral-800 dark:text-neutral-600 dark:hover:text-neutral-200'} ${disabled && 'pointer-events-none'} transition `}
 >
   <slot />
