chore: Remove fade-up animation from main element on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const { name, label } = basics
 ---
 
 <Layout title={`Portafolio de ${name} - ${label}`}>
-  <main class='animate-fade-up mx-auto mb-[65px] p-6'>
+  <main class='mx-auto mb-[65px] p-6'>
     <Hero />
     <About />
     <Education />
