--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
 import Post from '@/components/blog/Post.astro'
+import Bmc from '@/icons/Bmc.astro'
 import Layout from '@/layouts/Layout.astro'
 
 import { getCollection } from 'astro:content'
@@ -9,23 +10,32 @@ const allPosts = await (
 ---
 
 <Layout title='Home'>
-  <main class='flex w-full'>
-    <div
-      class='bloglist flex w-full flex-col gap-6 overflow-y-scroll border-r md:sticky md:top-0 md:max-h-screen md:w-[500px] dark:border-r-neutral-800'
+  <main class='flex w-full px-6'>
+    <section
+      class='mx-auto flex w-full max-w-[65ch] flex-col gap-6 dark:border-r-neutral-800'
+      id='blog-list'
     >
-      <header
-        class='sticky top-0 z-10 flex h-[65px] items-center justify-between border-b px-6 dark:border-neutral-800 dark:bg-[#131313]'
-      >
+      <header class='flex items-center justify-between pt-6 md:pt-[65px]'>
         <h1 class='text-xl'>Blog</h1>
         <div>
           <button> RSS </button>
           <button> Filter </button>
         </div>
       </header>
-      <div class='flex flex-col gap-2 px-6'>
+      <div class='flex flex-col gap-2'>
         {allPosts.map((post) => <Post post={post} />)}
       </div>
-    </div>
+      <footer
+        class='sticky bottom-[65px] w-full border-t border-t-neutral-800 bg-[#131313] sm:bottom-0'
+      >
+        <a
+          href='/'
+          class='flex h-full w-full justify-center gap-2 py-6'
+        >
+          <Bmc /> <span>Invítame a un café</span></a
+        >
+      </footer>
+    </section>
   </main>
 </Layout>
 
@@ -34,3 +44,14 @@ const allPosts = await (
     scrollbar-width: none;
   }
 </style>
+
+<script is:inline>
+  window.addEventListener('click', function () {
+    const scrollPosition = document.getElementById('blog-list').scrollTop
+    sessionStorage.setItem('scrollPosition', scrollPosition)
+  })
+  document.addEventListener('astro:page-load', function () {
+    const savedScrollPosition = sessionStorage.getItem('scrollPosition')
+    document.getElementById('blog-list').scrollTop = savedScrollPosition
+  })
+</script>
