--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const { name, label } = basics
 ---
 
 <Layout title={`Portafolio de ${name} - ${label}`}>
-  <main class='mx-auto mb-[65px] p-6'>
+  <main class='w-full px-6 pb-[65px] pt-6 md:pt-[65px]'>
     <Hero />
     <About />
     <Education />
