--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,46 +1,13 @@
 ---
-import Post from '@/components/blog/Post.astro'
 import Layout from '@/layouts/Layout.astro'
-import Bmc from '@/icons/Bmc.astro'
-
-import { getCollection } from 'astro:content'
-const allPosts = await (
-  await getCollection('blog')
-).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
 ---
 
 <Layout title='Home'>
-  <main class='flex w-full'>
-    <div
-      class='bloglist sticky top-0 hidden max-h-screen min-h-screen min-w-[500px] max-w-[500px] flex-col gap-6 overflow-y-scroll border-r lg:flex dark:border-r-neutral-800'
-      id='blog-list'
-    >
-      <header
-        class='sticky top-0 z-10 flex h-[65px] items-center justify-between border-b p-6 dark:border-neutral-800 dark:bg-[#131313]'
-      >
-        <h1 class='text-xl'>Blog</h1>
-        <div>
-          <button> RSS </button>
-          <button> Filter </button>
-        </div>
-      </header>
-      <div class='flex min-h-full flex-col gap-2 px-6'>
-        {allPosts.map((post) => <Post post={post} />)}
-      </div>
-      <footer class='sticky bottom-0 w-full border-t border-t-neutral-800 bg-[#131313]'>
-        <a
-          href='/'
-          class='flex h-full w-full justify-center gap-2 p-6'
-        >
-          <Bmc /> <span>Invítame a un café</span></a
-        >
-      </footer>
-    </div>
-    <div
-      class='prose mx-auto w-full p-6 dark:prose-invert prose-p:text-pretty prose-pre:w-full prose-img:rounded-xl'
-    >
-      <slot />
-    </div>
+  <main class='flex w-full flex-col gap-6 px-6'>
+    <header class='mx-auto w-full max-w-[65ch] pt-6 md:pt-[65px]'>
+      <a href='/blog'>Back to blog</a>
+    </header>
+    <slot />
   </main>
 </Layout>
 
@@ -49,14 +16,3 @@ const allPosts = await (
     scrollbar-width: none;
   }
 </style>
-
-<script is:inline>
-  window.addEventListener('click', function () {
-    const scrollPosition = document.getElementById('blog-list').scrollTop
-    sessionStorage.setItem('scrollPosition', scrollPosition)
-  })
-  document.addEventListener('astro:page-load', function () {
-    const savedScrollPosition = sessionStorage.getItem('scrollPosition')
-    document.getElementById('blog-list').scrollTop = savedScrollPosition
-  })
-</script>
