refactor: Update blog post layout and styling

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,9 +8,9 @@ import CmdK from '@/components/navbar/CmdK.astro'
 ---
 
 <nav
-  class='fixed bottom-0 z-50 flex h-[65px] w-screen shrink-0 items-center justify-center border-t bg-white sm:sticky sm:top-0 sm:h-screen sm:w-[65px] sm:flex-col sm:border-r dark:border-t-neutral-800 dark:bg-[#131313] dark:sm:border-r-neutral-800'
+  class='dark:md:border-r-primary dark:border-t-primary dark:bg-primary fixed bottom-0 z-50 flex h-[65px] w-screen shrink-0 items-center justify-center border-t bg-white md:sticky md:top-0 md:h-screen md:w-[65px] md:flex-col md:border-r'
 >
-  <ul class='flex w-full items-center justify-between gap-6 px-6 sm:flex-col sm:justify-center'>
+  <ul class='flex w-full items-center justify-between gap-6 px-6 md:flex-col md:justify-center'>
     <li>
       <NavLink
         href='/'
