--- a/src/components/navbar/NavLink.astro
+++ b/src/components/navbar/NavLink.astro
@@ -1,5 +1,5 @@
 ---
-const { href, disabled, tooltip } = Astro.props
+const { href, tooltip } = Astro.props
 
 const isCurrentPage = Astro.url.pathname.split('/')[1] === href.split('/')[1]
 ---
@@ -7,7 +7,7 @@ const isCurrentPage = Astro.url.pathname.split('/')[1] === href.split('/')[1]
 <a
   href={href}
   data-tippy-content={tooltip}
-  class={`${isCurrentPage ? 'dark:text-white fill-white' : ' fill-[#131313] text-neutral-500 hover:text-neutral-800 dark:text-neutral-600 dark:hover:text-neutral-200'} ${disabled && 'pointer-events-none'} transition `}
+  class={`${isCurrentPage ? 'dark:text-white dark:fill-white' : ' dark:fill-primary fill-white text-neutral-500 hover:text-neutral-800 dark:text-neutral-600 dark:hover:text-neutral-200'} transition `}
 >
   <slot />
 </a>
