--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,6 +8,7 @@ import LinkedIn from '@/icons/LinkedIn.astro'
 import GitHub from '@/icons/GitHub.astro'
 import WorldMap from '@/icons/WorldMap.astro'
 import type { SocialIcon } from '@/types'
+import Twitch from '@/icons/Twitch.astro'
 
 const { name, label, image, location, profiles, phone, email } = basics
 const { city, region } = location
@@ -15,7 +16,8 @@ const { city, region } = location
 const SOCIAL_ICONS: SocialIcon = {
   GitHub,
   LinkedIn,
-  X
+  X,
+  Twitch
 }
 ---
 
@@ -29,8 +31,8 @@ const SOCIAL_ICONS: SocialIcon = {
     </figure>
     <div class='info'>
       <h1>{name}</h1>
-      <h2>{label}</h2>
-      <span>
+      <h2 class='text-secondary text-pretty'>{label}</h2>
+      <span class='text-secondary'>
         <WorldMap />
         {city}, {region}
       </span>
@@ -103,14 +105,6 @@ const SOCIAL_ICONS: SocialIcon = {
     font-size: 2rem;
     width: fit-content;
   }
-
-  h2 {
-    color: #444;
-    font-weight: 500;
-    font-size: 1.1rem;
-    text-wrap: balance;
-  }
-
   img {
     aspect-ratio: 1 / 1;
     object-fit: cover;
@@ -119,7 +113,6 @@ const SOCIAL_ICONS: SocialIcon = {
   }
 
   span {
-    color: #666;
     display: flex;
     align-items: center;
     gap: 0.25rem;
