--- a/src/components/sections/stack/Software.astro
+++ b/src/components/sections/stack/Software.astro
@@ -1,27 +1,35 @@
-<section class='flex w-full flex-col gap-8'>
+---
+import Item from '@/components/sections/stack/Item.astro'
+---
+
+<section class='relative flex w-full flex-col'>
   <header>
-    <h2 class='text-3xl font-semibold'>Software</h2>
+    <h2 class='-left-24 hidden font-semibold text-neutral-500 lg:absolute lg:flex'>Software</h2>
   </header>
-  <div class='grid grid-cols-3 gap-2'>
-    <article class='relative flex flex-col gap-4 rounded-2xl bg-neutral-800 p-2 transition'>
-      <a
-        href='/stack'
-        class='absolute left-0 top-0 h-full w-full rounded-lg'
-      ></a>
-      <div>
-        <img
-          src='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
-          alt='Arc Browser'
-          class='aspect-square w-full object-contain'
-        />
-      </div>
-      <div class='flex flex-col gap-2 p-2'>
-        <span
-          class='w-fit rounded-lg border border-neutral-700 p-1 text-xs uppercase text-neutral-400'
-          >Buscador</span
-        >
-        <h3 class='text-lg'>Arc Browser</h3>
-      </div>
-    </article>
+  <div class='grid grid-cols-2 gap-2 sm:grid-cols-3'>
+    <Item
+      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      title='Arc'
+    />
+    <Item
+      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      title='Arc Browser'
+    />
+    <Item
+      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      title='Arc Browser'
+    />
+    <Item
+      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      title='Arc Browser'
+    />
+    <Item
+      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      title='Arc Browser'
+    />
+    <Item
+      img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
+      title='Arc Browser'
+    />
   </div>
 </section>
