--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -17,8 +17,8 @@ const { Content } = await entry.render()
 
 <BlogLayout>
   <header class='mx-auto max-w-[65ch]'>
-    <h1 class='text-2xl'>{entry.data.title}</h1>
-    <small
+    <h1 class='text-pretty text-2xl'>{entry.data.title}</h1>
+    <small class='text-secondary text-sm'
       >{
         entry.data.pubDate.toLocaleDateString('es-ES', {
           day: 'numeric',
