--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,12 +1,12 @@
 ---
-import Section from "../Section.astro"
+import Section from '../Section.astro'
 
-import { basics } from "@cv"
+import { basics } from '@cv'
 const { summary } = basics
 ---
 
-<Section title="Sobre mí">
-  <p>
+<Section title='Sobre mí'>
+  <p class='dark:text-prose'>
     {summary}
   </p>
 </Section>
