--- a/src/components/sections/stack/Hardware.astro
+++ b/src/components/sections/stack/Hardware.astro
@@ -4,7 +4,7 @@ import Item from '@/components/sections/stack/Item.astro'
 
 <section class='relative flex w-full flex-col'>
   <header>
-    <h2 class='text-secondary -left-24 hidden lg:absolute lg:flex'>Hardware</h2>
+    <h2 class='text-secondary lg:absolute lg:-left-24 lg:flex'>Hardware</h2>
   </header>
   <div class='grid grid-cols-2 gap-2'>
     <Item
