--- a/src/components/sections/stack/Software.astro
+++ b/src/components/sections/stack/Software.astro
@@ -4,7 +4,7 @@ import Item from '@/components/sections/stack/Item.astro'
 
 <section class='relative flex w-full flex-col'>
   <header>
-    <h2 class='-left-24 hidden font-semibold text-neutral-500 lg:absolute lg:flex'>Software</h2>
+    <h2 class='text-secondary lg:absolute lg:-left-24 lg:flex'>Software</h2>
   </header>
   <div class='grid grid-cols-2 gap-2 sm:grid-cols-3'>
     <Item
@@ -13,19 +13,19 @@ import Item from '@/components/sections/stack/Item.astro'
     />
     <Item
       img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
-      title='Arc Browser'
+      title='VS Code'
     />
     <Item
       img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
-      title='Arc Browser'
+      title='Warp'
     />
     <Item
       img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
-      title='Arc Browser'
+      title='Figma'
     />
     <Item
       img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
-      title='Arc Browser'
+      title='Apple Music'
     />
     <Item
       img='https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Arc_%28browser%29_logo.svg/2467px-Arc_%28browser%29_logo.svg.png'
