--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -3,31 +3,7 @@
 const { title } = Astro.props
 ---
 
-<section>
-  {title && <h2>{title}</h2>}
+<section class='relative mx-auto mb-9 max-w-[65ch] md:mb-12'>
+  {title && <h2 class='text-secondary lg:absolute lg:-left-36 lg:flex '>{title}</h2>}
   <slot />
 </section>
-
-<script>
-  // se ejecuta en el cliente <----
-</script>
-
-<style>
-  section {
-    max-width: 700px;
-    margin: 0 auto 48px;
-  }
-
-  h2 {
-    margin-bottom: 8px;
-    font-weight: 700;
-    line-height: 1.5;
-    font-size: 1.5rem;
-  }
-
-  @media (width <= 700px) {
-    section {
-      margin-bottom: 38px;
-    }
-  }
-</style>
