--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -31,7 +31,7 @@ const SOCIAL_ICONS: SocialIcon = {
     </figure>
     <div class='info'>
       <h1>{name}</h1>
-      <h2 class='text-secondary text-pretty'>{label}</h2>
+      <h2 class='text-pretty text-secondary'>{label}</h2>
       <span class='text-secondary'>
         <WorldMap />
         {city}, {region}
@@ -44,7 +44,7 @@ const SOCIAL_ICONS: SocialIcon = {
               title={`Enviar un correo electrónico a ${name} al correo ${email}`}
               target='_blank'
               rel='noopener noreferrer'
-              data-tippy-content='Correo electrónico'
+              data-tippy-content='Contacto'
               data-tippy-placement='bottom'
             >
               <Contact />
@@ -91,11 +91,13 @@ const SOCIAL_ICONS: SocialIcon = {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     gap: 1rem;
   }
 
   .info {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
